# voice-comms-dcs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  constraints.txt  pyproject.toml  requirements-dev.txt  requirements-whisper.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/problem-matchers/: mypy.json
.github/workflows/: ci.yml  test-python.yml  windows-installer.yml
config/: commands.example.json  model_hashes.example.json
config/aircraft_profiles/: default.json  su57.json
config/i18n/: en.json  es.json  fr.json  ko.json  ru.json  zh.json
config/joystick_profiles/: presets.json
config/rwr/: adapters.json
config/srs/: srs_audio.json
dcs_scripts/: Export.lua  Export.lua.append.example  VoiceBridge.lua  dcs_telemetry.lua  mission_trigger_example.lua
docs/: USER_MANUAL.md  architecture.md  dependency_security.md  developer_setup.md  installer_hardening.md  installer_roadmap.md  lua-timing-guide.md  model_integrity.md  model_selection.md  phase2_conversational_cockpit.md  phase3_frontend_high_fidelity.md  phase4_global_deployment.md  release_signing.md  runtime_benchmark_tuning.md  runtime_configuration.md  runtime_reliability.md  runtime_security.md  rwr-adapter-spec.md  security_and_limitations.md  security_report.md  srs-integration-spec.md  srs_security.md
src/voice_comms_dcs/: __init__.py  aircraft_profiles.py  api_routes.py  app.py  audio.py  config.py  context_manager.py  dashboard_security.py  dashboard_settings.py  dcs_installer_utils.py  dependency_manager.py  dependency_setup_ui.py  input_manager.py  input_profiles.py  install_lua_bridge.py  installer_wizard.py  language_models.py  launcher_app.py  main.py  manifest_signature.py  matcher.py  model_manifest.py  network.py  nimbus_intelligence.py  stt.py  (+12 more)
tests/: test_api_validation.py  test_command_dispatch.py  test_config_parsing.py  test_context_manager_threadsafe.py  test_dashboard_event_hub.py  test_dashboard_privacy.py  test_dashboard_security.py  test_dependency_files.py  test_dependency_manager_hashes.py  test_dependency_manager_manifest.py  test_docker_devcontainer.py  test_input_manager_diagnostics.py  test_installer_packaging.py  test_manifest_signing.py  test_matcher.py  test_network_protocol.py  test_nimbus_intelligence.py  test_radio_voice_cleanup.py  test_rolling_audio_buffer_limits.py  test_runtime_config_creation.py  test_rwr_adapters.py  test_srs_audio_security.py  test_subprocess_timeouts.py  test_webrtc_bridge_async.py  test_webrtc_config_overrides.py  test_webrtc_message_validation.py
(+3 files in other folders)
