[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-comms-dcs"
version = "0.4.0"
description = "Local-first multilingual voice, telemetry, AI wingman, smart installer, and WebRTC dashboard bridge for DCS World."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Rahul Sharma" }
]
dependencies = [
  "sounddevice>=0.4.6",
  "vosk>=0.3.45",
  "pyinstaller>=6.6.0",
  "aiortc>=1.9.0",
  "aiohttp>=3.9.5",
  "websockets>=12.0",
  "av>=12.0.0",
  "numpy>=1.26.4",
  "scipy>=1.13.0",
  "requests>=2.32.0",
  "pygame>=2.5.2",
  "pynput>=1.7.6",
  "whisper-cpp-python>=0.2.0"
]

[project.scripts]
voice-comms-dcs = "voice_comms_dcs.main:main"
voice-comms-dcs-webrtc = "voice_comms_dcs.webrtc_bridge:main"
voice-comms-dcs-telemetry = "voice_comms_dcs.telemetry_listener:main"
voice-comms-dcs-nimbus = "voice_comms_dcs.nimbus_intelligence:main"
voice-comms-dcs-radio-voice = "voice_comms_dcs.radio_voice:main"
voice-comms-dcs-input = "voice_comms_dcs.input_manager:main"
voice-comms-dcs-whisper = "voice_comms_dcs.stt_whisper_engine:main"
voice-comms-dcs-install-lua = "voice_comms_dcs.install_lua_bridge:main"
voice-comms-dcs-setup-dependencies = "voice_comms_dcs.setup_dependencies:main"
voice-comms-dcs-setup-dependencies-ui = "voice_comms_dcs.dependency_setup_ui:main"
voice-comms-dcs-srs = "voice_comms_dcs.srs_audio:main"
voice-comms-dcs-rwr = "voice_comms_dcs.rwr_adapters:main"
voice-comms-dcs-benchmark = "voice_comms_dcs.runtime_benchmark:main"
voice-comms-dcs-manifest = "voice_comms_dcs.release_manifest:main"
voice-comms-dcs-model-manifest = "voice_comms_dcs.model_manifest:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voice_comms_dcs = ["web_ui/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
